--- a/src/Components/Blank/Blank.css
+++ b/src/Components/Blank/Blank.css
@@ -7,15 +7,25 @@
   }
   
   .loading-spinner {
-    width: 70px;
-    aspect-ratio: 1;
-    border-radius: 50%;
-    background: 
-      radial-gradient(farthest-side,#ffa516 94%,#0000) top/8px 8px no-repeat,
-      conic-gradient(#0000 30%,#ffa516);
-    -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
-    animation: l13 1s infinite linear;
+    --d:22px;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  color: #ff8c00 !important;
+  box-shadow: 
+    calc(1*var(--d))      calc(0*var(--d))     0 0,
+    calc(0.707*var(--d))  calc(0.707*var(--d)) 0 1px,
+    calc(0*var(--d))      calc(1*var(--d))     0 2px,
+    calc(-0.707*var(--d)) calc(0.707*var(--d)) 0 3px,
+    calc(-1*var(--d))     calc(0*var(--d))     0 4px,
+    calc(-0.707*var(--d)) calc(-0.707*var(--d))0 5px,
+    calc(0*var(--d))      calc(-1*var(--d))    0 6px;
+  animation: l27 1s infinite steps(8);
   }
+
+@keyframes l27 {
+  100% {transform: rotate(1turn)}
+}
   
   @keyframes l13{ 
     100%{transform: rotate(1turn)}
