--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -101,7 +101,9 @@
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   z-index: 1;
   display: flex;
+  padding: 3px;
   flex-direction: column; 
+  border-radius: 20px;
 }
 
 .dropdown-item-1 {
