--- a/src/Components/ChatPage/ChatPage.css
+++ b/src/Components/ChatPage/ChatPage.css
@@ -5,7 +5,7 @@
     height: 90vh;
 }
 .container-chat .list-group-chat {
-    border-right: 1px solid brown;
+    border-right: 3px solid rgb(255, 170, 1);
     padding: 0 10px;
     overflow-y: auto;
     width: 30%;
@@ -19,6 +19,7 @@
     height: 100px;
     padding: 0 10px;
     margin-bottom: 10px;
+    margin-top: 21px;
 }
 .list-group-chat .item:hover {
     background-color: rgba(188, 188, 188, 0.5);
@@ -80,6 +81,7 @@
     display: flex;
     justify-content: end;
     margin: 2px 0;
+    margin-top: 21px;
 }
 .container-chat .my-message .body-message {
     background-color: #0084FF;
@@ -95,6 +97,7 @@
     margin: 0;
     padding: 10px;
     border-radius: 10px;
+    
 }
 
 .container-chat .your-message {
@@ -102,6 +105,7 @@
     display: flex;
     justify-content: start;
     margin: 2px 0;
+    margin-top: 21px;
 }
 .container-chat .your-message .body-message {
     background-color: #F0F0F0;
@@ -112,6 +116,11 @@
 }
 .container-chat .container-input-content .input-message{
     width: 95%;
+    border-radius: 10px;
+    margin-bottom: 20px;
+    height: 25px;
+    font-size: 20px;
+    padding: 10px;
     /* margin: 0 20px; */
 }
 .container-chat .container-input-content .icon-send {
@@ -128,4 +137,5 @@
 .container-chat .container-input-content .icon-send .fa-paper-plane {
     color: black;
     font-size: 20px;
+    margin-bottom: 15px;
 }
