--- a/src/Components/ProductAdmin/ListProduct/productList.component.css
+++ b/src/Components/ProductAdmin/ListProduct/productList.component.css
@@ -16,3 +16,7 @@
     border-radius: 5px;
     margin-right: 5px;
 }
+
+.ant-table-thead .ant-table-cell {
+    background-color: #ffb973 !important;
+}
