--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -1,14 +1,20 @@
 /* Sidebar.css */
 
 .site-layout-background {
-    background-color: #fff;
+    background-color: white;
 }
 
 .site-layout-sidebar {
-    background-color: #ffb973 !important;
+    background-color: white !important;
+    border-right: 0.5px solid black;
+    height: auto;
 }
 
 .menu {
     height: 100%;
-    background-color: #ffb973;
+    background-color: white;
 }
+
+/* .menu .div {
+    padding-top: 100px !important;
+} */
